# Anonip

./: .coveragerc  .editorconfig  .flake8  .gitignore  .gitlint  .isort.cfg  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README_DE  anonip.py  conftest.py  docker-compose.yml  nginx.conf  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: pypi.yml  tests.yml
