[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_files =
    LICENSE.txt

[flake8]
ignore =
    # whitespace before ':'
    E203,
    # too many leading ### in a block comment
    E266,
    # line too long (managed by black)
    E501,
    # Line break occurred before a binary operator (this is not PEP8 compatible)
    W503,
    # do not enforce existence of docstrings
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
    # needed because of https://github.com/ambv/black/issues/144
    D202,
    # other string does contain unindexed parameters
    P103
max-line-length = 88
max-complexity = 10
doctests = True
show-source = True
statistics = True

[tool:isort]
known_first_party=anonip
known_third_party=pytest
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[tool:pytest]
addopts = --cov=anonip --cov-report=term-missing --no-cov-on-fail

[coverage:paths]
source=.

[coverage:run]
branch = True

[coverage:report]
precision = 2
fail_under = 100
show_missing = True
